Raw click working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,16 @@ anyhow = "1.0.81"
 rustls-pemfile = "1.0.4"
 rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
 time = "0.3.36"
-x11rb = "0.13.0"
+x11rb = { version = "0.13.0", features = ["xtest"] }
 eframe = "0.27.2"
 egui = "0.27.2"
 egui_extras = "0.27.2"
 env_logger = "0.11.3"
 
-# generation
+# generation e security
 rcgen = "0.13.1"
 ring = "0.17.8"
+pem = "3.0.4"
 
 # parsing
 toml = "0.8.12"
@@ -35,7 +36,7 @@ serde = { version = "1.0.200", features = ["derive"]}
 log = "0.4.21"
 chrono = "0.4.37"
 fern = "0.6.2"
-pem = "3.0.4"
+
 
 [target.'cfg(target_os = "linux")'.dependencies]
 pam = "0.8.0"
@@ -47,3 +48,9 @@ path = "src/client/main.rs"
 [[bin]]
 name = "server"
 path = "src/server/main.rs"
+
+[features]
+cursor = ["render", "resource_manager"]
+
+render = ["x11rb/render"]
+resource_manager = ["x11rb/resource_manager"]
